Fixed z-index to make favicons clickable

--- a/style.css
+++ b/style.css
@@ -76,7 +76,6 @@ img {
 
 #profile-link {
   z-index: 0;
-  ;
 }
 
 #projects {
@@ -90,4 +89,5 @@ top:0;
 right:0;
 bottom:0;
 left:0;
+z-index: -1;
 }
